# UltraEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CustomEngine.sln  README.md
.github/workflows/: c-cpp.yml
Engine/: AStar.cpp  AStar.h  AStar_Test.cpp  BinarySearch.h  BinarySearch_Test.cpp  Component.cpp  Component.h  Component_Test.cpp  DedicatedServer.cpp  DedicatedServer.h  DedicatedServer_Test.cpp  DynamicArray.h  DynamicArray_Test.cpp  Engine.cpp  Engine.vcxproj  Engine_Test.cpp  Entity.cpp  Entity.h  EntityAdmin.cpp  EntityAdmin.h  EntityAdmin_Test.cpp  Entity_Test.cpp  GameSettings.txt  GameSettingsSystem.h  GameSettingsSystem_Test.cpp  HashMap.cpp  HashMap.h  HashMap_Test.cpp  IGraphicsAPI.h  IOperatingSystem.h  IPlatformSpecificWindowSystem.cpp  IPlatformSpecificWindowSystem.h  IPlatformSpecificWindowSystem_Test.cpp  IPlatformWindowSystem.cpp  IPlatformWindowSystem.h  IPlatformWindowSystem_Test.cpp  IRenderHardwareInterface.h  ISocket.h  ISystem.h  IVulkanAPI.h  (+66 more)
scripts/: rebuild.ps1
